# kern

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  KERN.md  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: desktop.yml  docker.yml  npm.yml  release.yml
android/: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: architecture.md  caching.md  clients.md  commands.md  config.md  context.md  daemon.md  dashboards.md  deployment.md  docker.md  get-started.md  interfaces.md  mcp.md  media.md  memory.md  pairing.md  security-remediation-kern-gitignore.md  security-vulnerability-kern-gitignore.md  sessions.md  skills.md  subagents.md  tools.md  web-ui.md
src/: app.ts  backup.ts  config.ts  context.ts  daemon.ts  global-config.ts  hub-contacts.ts  hub-daemon.ts  hub.ts  import-openclaw-lcm.ts  import.ts  index.ts  init.ts  install.ts  kernel.ts  keys.ts  log.ts  media.ts  memory.ts  model.ts  notes.ts  pairing.ts  proxy-daemon.ts  proxy.ts  queue.ts  recall.ts  registry.ts  remotes.ts  runtime.ts  segments.ts  server.ts  session.ts  status.ts  supervisor.ts  test-ansi.tsx  tui-autocomplete.tsx  tui-v2.tsx  tui.ts  tui.tsx  util.ts  (+2 more)
templates/: AGENTS.md  IDENTITY.md  KERN.md  KNOWLEDGE.md  USERS.md
web/: .gitignore  .npmignore  next.config.ts  package-lock.json  package.json
(+152 files in other folders)
